--- a/images/locale/ru/LC_MESSAGES/djangojs.po
+++ b/images/locale/ru/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-26 12:53+0000\n"
+"POT-Creation-Date: 2025-10-27 09:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,6 +19,15 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
 "(n%100>=11 && n%100<=14)? 2 : 3);\n"
+
 #: images/static/js/bookmarklet.js:21
 msgid "Select an image to bookmark"
 msgstr "Выберите изображение для закладки"
+
+#: images/static/js/images.js:30
+msgid "Like"
+msgstr "Нравится"
+
+#: images/static/js/images.js:30
+msgid "Unlike"
+msgstr "Не нравится"
