add html, css, js for shop app

--- a/shop/locale/ru/LC_MESSAGES/django.po
+++ b/shop/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-10-29 06:03+0000\n"
+"POT-Creation-Date: 2025-10-29 06:57+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,6 +19,64 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && "
 "n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || "
 "(n%100>=11 && n%100<=14)? 2 : 3);\n"
+
 #: shop/apps.py:8
 msgid "Shop"
 msgstr "Магазин"
+
+#: shop/models.py:12 shop/models.py:44
+msgid "Category"
+msgstr "Категория"
+
+#: shop/models.py:13 shop/templates/shop/product/list.html:13
+msgid "Categories"
+msgstr "Категории"
+
+#: shop/models.py:16 shop/models.py:47
+msgid "Name"
+msgstr "Название"
+
+#: shop/models.py:19 shop/models.py:50
+msgid "Slug"
+msgstr "Слаг"
+
+#: shop/models.py:37
+msgid "Product"
+msgstr "Товар"
+
+#: shop/models.py:38 shop/templates/shop/product/list.html:8
+#: shop/templates/shop/product/list.html:30
+msgid "Products"
+msgstr "Товары"
+
+#: shop/models.py:55
+msgid "Image"
+msgstr "Изображение"
+
+#: shop/models.py:58
+msgid "Description"
+msgstr "Описание"
+
+#: shop/models.py:61
+msgid "Price"
+msgstr "Цена"
+
+#: shop/models.py:64
+msgid "Availability"
+msgstr "Наличие"
+
+#: shop/models.py:67
+msgid "Creation date"
+msgstr "Дата создания"
+
+#: shop/models.py:70
+msgid "Update date"
+msgstr "Дата обновления"
+
+#: shop/templates/shop/base.html:10
+msgid "Your cart is empty"
+msgstr "Ваша корзина пуста"
+
+#: shop/templates/shop/product/list.html:16
+msgid "All"
+msgstr "Все"
